added more to intro paragraph

--- a/src/index.css
+++ b/src/index.css
@@ -114,8 +114,8 @@ h2 {
   cursor: pointer;
 }
 
-#intro-p{
-  margin: 100px 500px;
+#about-myself{
+  margin: 100px 300px;
   text-align: center;
   font-size: 20px;
   color: white;
