--- a/src/index.css
+++ b/src/index.css
@@ -72,18 +72,18 @@
 }
 
 body {
+  background-image: url("forest background 4k.jpg");
   margin: 0px;
-  background-image: url('https://images.pexels.com/photos/326311/pexels-photo-326311.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260');
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
 }
 
 h1 {
-  margin-top: 150px;
+  margin-top: 100px;
   margin-bottom: 20px;
   text-align: center;
-  font-size: 60px;
+  font-size: 80px;
   color: white;
   font-family: Lucida Handwriting;
   font-weight: 200;
@@ -105,18 +105,22 @@ h2 {
   width: 300px;
 }
 
-.hiddenInfo{
-  text-align: center;
-  color: white
-}
-
-.hideButton{
-  cursor: pointer;
-}
-
 #about-myself{
-  margin: 100px 300px;
+  margin-top: 100px;
   text-align: center;
   font-size: 20px;
+  text-shadow:
+        0.07em 0 black,
+        0 0.07em black,
+        -0.07em 0 black,
+        0 -0.07em black;
   color: white;
+}
+
+.mainFrame{
+  margin: 0px 20%;
+}
+
+.drawer{
+  position: fixed;
 }
