--- a/src/index.css
+++ b/src/index.css
@@ -72,7 +72,7 @@
 }
 
 body {
-  background-image: url("forest background 4k.jpg");
+  background-image: url("DesktopPapersco-ve36-cool-dark-background-pattern-abstract.jpg");
   margin: 0px;
   background-repeat: no-repeat;
   background-size: cover;
