--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,6 @@ body, html {
 }
 
 h1 {
-  padding-top: 100px;
   margin-bottom: 20px;
   text-align: center;
   font-size: 80px;
@@ -18,6 +17,12 @@ h1 {
 h2 {
   margin-bottom: 100px;
   text-align: center;
+  font-size: 50px;
+}
+
+h3 {
+  text-align: center;
+  margin-bottom: 50px;
   font-size: 20px;
 }
 
@@ -29,15 +34,15 @@ h2 {
 }
 
 #about-myself{
-  margin: 0% 10%;
+  margin: 0 10%;
   padding: 10% 0;
   text-align: center;
   font-size: 20px;
 }
 
 .mainFrame{
-  margin-top: 0;
-  margin: 0 27%;
+  margin: 50px 27%;
+  padding: 30px;
   height: 100%;
   background-color: #e0d3af;
 }
@@ -48,4 +53,10 @@ h2 {
 
 #discord_link{
   color:red;
+}
+
+#content{
+  text-align: center;
+  font-size: 20px;
+  margin: 20px;
 }
